fix(style): break words in a button upon overflow

--- a/src/app/shared/components/dialog-switcher-button/dialog-switcher-button.component.css
+++ b/src/app/shared/components/dialog-switcher-button/dialog-switcher-button.component.css
@@ -4,3 +4,8 @@
  * This software is released under the MIT License.
  * https://opensource.org/licenses/MIT
  */
+
+:host,
+button {
+  white-space: pre-wrap;
+}
